--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
           <ul>
             <li><a href="index.html">Home<br></a></li>
             <li><a href="#about" class="active">About</a></li>
-            <li><a href="subject.html">Subject</a></li>
+            <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="MainShells-or-Orbits.html">အဓီကအခွံ (ပတ်လမ်း)များ</a></li>
