--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
             </li>
             <li class="dropdown"><a href="#"><span>လုပ်ငန်းစဉ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">လုပ်ငန်းစဉ် (၁)</a></li>
-                <li><a href="#">လုပ်ငန်းစဉ် (၂)</a></li>
-                <li><a href="#">လုပ်ငန်းစဉ် (၃)</a></li>
+                <li><a href="ProcessOne.html">လုပ်ငန်းစဉ် (၁)</a></li>
+                <li><a href="ProcessTwo.html">လုပ်ငန်းစဉ် (၂)</a></li>
+                <li><a href="ProcessThree.html">လုပ်ငန်းစဉ် (၃)</a></li>
+                <li><a href="ProcessFour.html">လုပ်ငန်းစဉ် (၄)</a></li>
+                <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
             <li><a href="#contact">Contact</a></li>
