--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="Reference.html">Reference</a></li>
+            <li><a href="#contact">Exercises</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -395,37 +396,7 @@
             </div>
           </div><!-- End Gallery Item -->
 
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/specials-6.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/specials-6.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/specials-7.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/specials-7.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/specials-8.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/specials-8.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/specials-6.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/specials-6.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
+          
 
         </div>
 
