--- a/Exercise.html
+++ b/Exercise.html
@@ -94,7 +94,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero" class="active">Home<br></a></li>
+            <li><a href="#hero" >Home<br></a></li>
             <li><a href="about.html">About</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -114,8 +114,8 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html">Reference</a></li>
-            <li><a href="#contact">Exercises</a></li>
+            <li><a href="Reference.html" >Reference</a></li>
+            <li><a href="Exercise.html" class="active">Exercises</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
