--- a/MainShells-or-Orbits.html
+++ b/MainShells-or-Orbits.html
@@ -96,7 +96,7 @@
               </ul>
             </li>
             <li><a href="Reference.html">Reference</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="Exercise.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
