--- a/SelectExercise.html
+++ b/SelectExercise.html
@@ -158,16 +158,18 @@
 
   <script>
 const quiz = [
-  { q: "အီလက်ထရွန်များသည် နျူကလိယကိုလှည့်ပတ်နေသည်။", options: ["မှန်", "မှား"], answer: 0 },
-  { q: "နျူကလိယသည် အီလက်ထရွန်များကို လှည့်ပတ်နေသည်။", options: ["မှန်", "မှား"], answer: 1 },
-  { q: "ဒြပ်စင်အက်တမ်တစ်ခု၏ နျူကလိယအတွင်းရှိ ပရိုတွန်အရေအတွက်သည် အီလက်ထရွန် အရေအတွက်နှင့် တူညီသည်။", options: ["မှန်", "မှား"], answer: 0 },
-  { q: "နျူကလိယနှင့်အနီးဆုံးအခွံသည် စွမ်းအင်အမြင့်ဆုံးဖြစ်သည်။", options: ["မှန်", "မှား"], answer: 1 },
-  { q: "ကာဗွန်အက်တမ်၏ အက်တမ်အမှတ်စဉ်မှာ 7 ဖြစ်သည်။", options: ["မှန်", "မှား"], answer: 1 },
-  { q: "အလှည့်ကျဇယားတွင် အနက်ရောင်မျဉ်း၏ လက်ဝဲဘက်၌ရှိသောဒြပ်စင်များသည် သတ္တုဒြပ်စင်များဖြစ်သည်။", options: ["မှန်", "မှား"], answer: 0 },
-  { q: "အလူမီနီယံဒြပ်စင်သည် သတ္တုယောင်ဒြပ်စင်ဖြစ်သည်။", options: ["မှန်", "မှား"], answer: 1 },
-  { q: "အက်တမ်များသည် အီလက်ထရွန်ပေးခြင်း၊ ယူခြင်း၊ မျှဝေသုံးစွဲခြင်းဖြင့် တည်မြဲသောအီလက် ထရွန်ဖွဲ့တည်ပုံများ ရယူကြသည်။", options: ["မှန်", "မှား"], answer: 0 },
-  { q: "အိုင်းယွန်းများတွင် ပရိုတွန်အရေအတွက်နှင့်အီလက်ထရွန်အရေအတွက် တူညီကြသည်။ ", options: ["မှန်", "မှား"], answer: 0 },
-  { q: "ဖလိုရင်းသည် လျှပ်စစ်ဓာတ်မသတ္တိအများဆုံးဖြစ်သည်။ ", options: ["မှန်", "မှား"], answer: 1 },
+  { q: "နျူကလိယနှင့် အနီးဆုံးအခွံမှာ (M, K, L) shell ဖြစ်သည်။ ", options: ["M", "K", "L"], answer: 1 },
+  { q: "ဟီလီယမ်အက်တမ်း၏ ပေါင်းစည်းကိန်းမှာ (0, 2, 7) ဖြစ်သည်။", options: ["0", "2", "7"], answer: 0 },
+  { q: "ဆီလီကွန်သည် (သတ္တုဒြပ်စင်၊ သတ္တုမဟုတ်သတ္တုယောင်ဒြပ်စင်၊ သတ္တုယောင်) ဖြစ်သည်။", options: ["သတ္တုဒြပ်စင်", "သတ္တုမဟုတ်သတ္တုယောင်ဒြပ်စင်", "သတ္တုယောင်"], answer: 2 },
+  { q: "(ကလိုရင်း၊ ဘရိုမင်း၊ ဖလိုရင်း) သည် လျှပ်စစ်ဓာတ်မသတ္တိအများဆုံးဖြစ်သည်။", options: ["ကလိုရင်း", "Kဘရိုမင်း", "ဖလိုရင်း"], answer: 0 },
+  { q: "ဟေလိုဂျင်မျာသည် အီလက်ထရွန်ဆွဲစွမ်းအင် (အများဆုံး၊ အနည်းဆုံး၊ မရှိသော) ဒြပ်စင်များ ဖြစ်သည်။", options: ["အများဆုံး", "အနည်းဆုံး", "မရှိသော"], answer: 0 },
+  { q: "ဆာလဖာအက်တမ်သည် အုပ်စု (V, VI,  VII) တွင်ရှိသည်။", options: ["V", "VI", "VII"], answer: 1 },
+  { q: "နိုက်ထရိုဂျင်အက်တမ်၏ ပေါင်းစည်းကိန်းမှာ (0, 3, 5) ဖြစ်သည်။", options: ["0", "3", "5"], answer: 1 },
+  { q: "မိသိန်းမော်လီကျူးတစ်ခုတွင် ကာဗွန်အက်တမ်း (၁ ၊ ၂၊ ၄) ခုရှိသည်။", options: ["၁", "၂", "၄"], answer: 0 },
+  { q: "လျှပ်စစ်ဓာတ်ဖိုသတ္တိအများဆုံးရှိသော သတ္တုဒြပ်စင်များသည် (အယ်ကာလီသတ္တုများ၊ ဟေလိုဂျင်များ၊ အစွမ်းမဲ့ဓာတ်ငွေ့များ) ဖြစ်သည်။", options: ["အယ်ကာလီသတ္တုများ", "ဟေလိုဂျင်များ", "အစွမ်းမဲ့ဓာတ်ငွေ့များ"], answer: 0 },
+  { q: "ဟိုက်ဒရိုဂျင်အက်တမ်သည် (သတ္တုဒြပ်စင်၊ သတ္တုမဟုတ်ဒြပ်စင်၊ သတ္တုယောင်) ဖြစ်သည်။", options: ["သတ္တုဒြပ်စင်", "သတ္တုမဟုတ်ဒြပ်စင်", "သတ္တုယောင်"], answer: 2 },
+  
+  
   
 ];
 
