--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
               </ul>
             </li>
             <li><a href="Reference.html">Reference</a></li>
-            <li><a href="Exercise.html">Exercises</a></li>
+            <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
+                <li><a href="Exercise.html">(မှန်),(မှား) </a></li>
+                <li><a href="SelectExercise.html">ရွေးချယ်မှု</a></li>
+                
+              </ul>
+            </li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
