--- a/Exercise.html
+++ b/Exercise.html
@@ -96,8 +96,8 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero" >Home<br></a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html" >ပင်မ<br></a></li>
+            <li><a href="about.html">အကြောင်းအရာ</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -116,8 +116,15 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html" >Reference</a></li>
-            <li><a href="Exercise.html" class="active">Exercises</a></li>
+            <li><a href="Reference.html" >ကိုးကားချက်</a></li>
+            <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
+                <li><a href="Exercise.html">(မှန်),(မှား) </a></li>
+                <li><a href="SelectExercise.html">ရွေးချယ်မှု</a></li>
+                
+              </ul>
+            </li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
