--- a/ProcessFive.html
+++ b/ProcessFive.html
@@ -34,6 +34,11 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    .text-red{
+      color: red !important;
+    }
+  </style>
 </head>
 
 <body class="index-page">
@@ -67,8 +72,8 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" >Home<br></a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html" >ပင်မ<br></a></li>
+            <li><a href="about.html">အကြောင်းအရာ</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -95,7 +100,7 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html">Reference</a></li>
+            <li><a href="Reference.html">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
@@ -151,7 +156,7 @@
         <h2 class="text-center">လုပ်ငန်းစဉ် (၅)</h2>
         <div class="container mt-4">
             <ul>
-                <li>အုပ်စုများဖွဲ့ပြီး အောက်ပါဇယားကို ဖြည့်စွက်ပါ။</li>
+                <li>အောက်ပါဇယားကို ဖြည့်စွက်ဖော်ပြထားပါသည်။</li>
                 
             </ul>
         </div>
@@ -177,92 +182,92 @@
   <tbody>
     <tr>
           <td>ဟိုက်ဒရိုဂျင် (<sub>1</sub>H)</td>
-          <td>1</td>
-          <td>1</td>
+          <td class="text-red">1</td>
+          <td class="text-red">1</td>
           <td class="text-red">1</td>
         </tr>
         <tr>
           <td>ဟီလီယမ် (<sub>2</sub>He)</td>
-          <td>2</td>
-          <td>2</td>
+          <td class="text-red">2</td>
+          <td class="text-red">2</td>
           <td class="text-red">2</td>
         </tr>
         <tr>
           <td>လစ်သီယမ် (<sub>3</sub>Li)</td>
-          <td>2.1</td>
-          <td>1</td>
+          <td class="text-red">2.1</td>
+          <td class="text-red">1</td>
           <td class="text-red">1</td>
         </tr>
         <tr>
           <td>ဗယ်ရီလီယမ် (<sub>4</sub>Be)</td>
-          <td>2.2</td>
-          <td>2</td>
+          <td class="text-red">2.2</td>
+          <td class="text-red">2</td>
           <td class="text-red">2</td>
         </tr>
         <tr>
           <td>ဗိုရွန် (<sub>5</sub>B)</td>
-          <td>2.3</td>
-          <td>3</td>
+          <td class="text-red">2.3</td>
+          <td class="text-red">3</td>
           <td class="text-red">3</td>
         </tr>
         <tr>
           <td>ကာဗွန် (<sub>6</sub>C)</td>
-          <td>2.4</td>
-          <td>4</td>
+          <td class="text-red">2.4</td>
+          <td class="text-red">4</td>
           <td class="text-red">4</td>
         </tr>
         <tr>
           <td>နိုက်ထရိုဂျင် (<sub>7</sub>N)</td>
-          <td>2.5</td>
-          <td>7</td>
+          <td class="text-red">2.5</td>
+          <td class="text-red">7</td>
           <td class="text-red">8-5=3</td>
         </tr>
         <tr>
           <td>အောက်ဆီဂျင် (<sub>8</sub>O)</td>
-          <td>2.6</td>
-          <td>6</td>
+          <td class="text-red">2.6</td>
+          <td class="text-red">6</td>
           <td class="text-red">8-6=2</td>
         </tr>
         <tr>
           <td>ဖလိုရင်း (<sub>9</sub>F)</td>
-          <td>2.7</td>
-          <td>7</td>
+          <td class="text-red">2.7</td>
+          <td class="text-red">7</td>
           <td class="text-red">8-7=1</td>
         </tr>
         <tr>
           <td>နီယွန် (<sub>10</sub>Ne)</td>
-          <td>2.8</td>
-          <td>10</td>
+          <td class="text-red">2.8</td>
+          <td class="text-red">10</td>
           <td class="text-red">8-8=0</td>
         </tr>
         <tr>
           <td>ဆိုဒီယမ် (<sub>11</sub>Na)</td>
-          <td>2.8.1</td>
-          <td>1</td>
+          <td class="text-red">2.8.1</td>
+          <td class="text-red">1</td>
           <td class="text-red">1</td>
         </tr>
         <tr>
           <td>အလူမီနီယမ် (<sub>13</sub>AL)</td>
-          <td>2.8.3</td>
-          <td>3</td>
+          <td class="text-red">2.8.3</td>
+          <td class="text-red">3</td>
           <td class="text-red">3</td>
         </tr>
         <tr>
           <td>ဖော့စဖရပ် (<sub>15</sub>P)</td>
-          <td>2.8.5</td>
-          <td>5</td>
+          <td class="text-red">2.8.5</td>
+          <td class="text-red">5</td>
           <td class="text-red">8-5=3</td>
         </tr>
         <tr>
           <td>ကလိုရင်း (<sub>17</sub>CL)</td>
-          <td>2.8.7</td>
-          <td>7</td>
+          <td class="text-red">2.8.7</td>
+          <td class="text-red">7</td>
           <td class="text-red">8-7=1</td>
         </tr>
         <tr>
           <td>အာဂွန် (<sub>18</sub>Ar)</td>
-          <td>2.8.8</td>
-          <td>8</td>
+          <td class="text-red">2.8.8</td>
+          <td class="text-red">8</td>
           <td class="text-red">8-8=0</td>
         </tr>
 
