--- a/ProcessOne.html
+++ b/ProcessOne.html
@@ -34,6 +34,11 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  <style>
+    .text-red{
+      color: red !important;
+    }
+  </style>
 </head>
 
 <body class="index-page">
@@ -67,8 +72,8 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" >Home<br></a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html" >ပင်မ<br></a></li>
+            <li><a href="about.html">အကြောင်းအရာ</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -95,7 +100,7 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html">Reference</a></li>
+            <li><a href="Reference.html">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
@@ -161,7 +166,7 @@
         <div class="container mt-4">
             <ul>
                 <li>ဗယ်ရီလီယမ်အက်တမ်တွင် အီလက်ထရွန် ၄ လုံးရှိရာ အီလက်ထရွန်ပတ်လမ်း 1 တွင် အီလက်ထရွန် ၂ လုံးလှည့်ပတ်နေပြီး ကျန်အီလက်ထရွန် ၂ လုံးသည် ပတ်လမ်း 2တွင် လှည့်ပတ်နေသည်။</li>
-                <li>အလှည့်ကျဇယားကိုအသုံးပြုပြီး အုပ်စုများဖွဲ့၍ အောက်ပါဇယားကို ဖြည့်စွတ်ပါ။</li>
+                <li>အလှည့်ကျဇယားကိုအသုံးပြုပြီး အောက်ပါဇယားကို ဖြည့်စွတ်ဆောင်ရွက်ထားပါသည်။</li>
             </ul>
         </div>
         <div class="container table-responsive">
@@ -182,28 +187,28 @@
       <th>B</th>
       <td>5</td>
       <td>11</td>
-      <td>5</td>
-      <td>5</td>
-      <td>6</td>
-      <td><sup>11</sup><sub>5</sub>B</td>
+      <td class="text-red">5</td>
+      <td class="text-red">5</td>
+      <td class="text-red">6</td>
+      <td class="text-red"><sup>11</sup><sub>5</sub>B</td>
     </tr>
     <tr>
       <th >N</th>
       <td>7</td>
       <td>14</td>
-      <td>7</td>
-      <td>7</td>
-      <td>14-7 = 7</td>
-      <td><sup>14</sup><sub>7</sub>N</td>
+      <td class="text-red">7</td>
+      <td class="text-red">7</td>
+      <td class="text-red">14-7 = 7</td>
+      <td class="text-red"><sup>14</sup><sub>7</sub>N</td>
     </tr>
     <tr>
       <th>Mg</th>
       <td>12</td>
       <td>24</td>
-      <td>12</td>
-      <td>12</td>
-      <td>24-12 = 12</td>
-      <td><sup>24</sup><sub>12</sub>Mg</td>
+      <td class="text-red">12</td>
+      <td class="text-red">12</td>
+      <td class="text-red">24-12 = 12</td>
+      <td class="text-red"><sup>24</sup><sub>12</sub>Mg</td>
     </tr>
   </tbody>
 </table>
