--- a/MainShells-or-Orbits.html
+++ b/MainShells-or-Orbits.html
@@ -67,8 +67,8 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" >Home<br></a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html" >ပင်မ<br></a></li>
+            <li><a href="about.html">အကြောင်းအရာ</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -95,7 +95,7 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html">Reference</a></li>
+            <li><a href="Reference.html">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
