--- a/Reference.html
+++ b/Reference.html
@@ -51,8 +51,8 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="#hero" class="active">Home<br></a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">ပင်မ<br></a></li>
+            <li><a href="about.html">အကြောင်းအရာ</a></li>
             <!-- <li><a href="subject.html">Subject</a></li> -->
             <li class="dropdown"><a href="#"><span>ဘာသာရပ်များ</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -71,7 +71,7 @@
                 <li><a href="ProcessFive.html">လုပ်ငန်းစဉ် (၅)</a></li>
               </ul>
             </li>
-            <li><a href="Reference.html">Reference</a></li>
+            <li><a href="Reference.html" class="active">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
@@ -99,29 +99,18 @@
     <!-- Why Us Section -->
     <section id="why-us" class="why-us section mt-5">
 
-      <!-- Section Title -->
-      <div class="container section-title text-center" data-aos="fade-up">
-      <div class="d-flex justify-content-center mb-4">
-        <img src="assets/img/Dagon1.png" class="academic-logo" alt="" style="width: 70px;margin-right: 20px;">
-        <p>2025-2026 Academic Year</p>
-        <img src="assets/img/MCF.png" class="academic-logo" alt="" style="width: 70px;margin-left: 20px;">
-      </div>
-        <span>National ICT Award-2025 (Educational Project and Skills Competition)</span><br>
-        <span>(1) Basic Education Hight School, Dagon </span><br>
-        <span>Unit-1, Lesson-1</span>
-      </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
-
+          <h4 class="text-center" style="color: var(--accent-color);">ကိုးကားချက်</h4>
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <a href="https://www.google.com/">
             <div class="card-item">
                 <div style="height: 100px;">
                 <img src="assets/img/google.png" alt="" style="width: 150px;">
                 </div>
-              <span>https://www.google.com/</span>
+              <span style="font-size: 18px;">https://www.google.com/</span>
             </div>
             </a>
           </div><!-- Card Item -->
@@ -130,7 +119,7 @@
             <a href="https://www.w3schools.com/html/">
             <div class="card-item">
                 <img src="assets/img/w3schools.png" alt="" style="width: 100px;">
-              <span>https://www.w3schools.com/html/</span>
+              <span style="font-size: 18px;">https://www.w3schools.com/html/</span>
             </div>
             </a>
           </div><!-- Card Item -->
@@ -139,7 +128,7 @@
             <a href="https://www.youtube.com/">
             <div class="card-item">
                 <img src="assets/img/youtube.png" alt="" style="width: 100px;">
-              <span>https://www.youtube.com/</span>
+              <span style="font-size: 18px;">https://www.youtube.com/</span>
             </div>
             </a>
           </div><!-- Card Item -->
