--- a/ProcessFour.html
+++ b/ProcessFour.html
@@ -98,7 +98,7 @@
             <li><a href="Reference.html">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
+                <li><a href="fill-in-blank.html">ကွက်လပ်ဖြည့်</a></li>
                 <li><a href="Exercise.html">(မှန်),(မှား) </a></li>
                 <li><a href="SelectExercise.html">ရွေးချယ်မှု</a></li>
                 
@@ -178,14 +178,8 @@
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Grade10</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">PK</a> Distributed by <a href="https://themewagon.com" target="_blank">PK</a>
-      </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Grade9 </strong> <span>All Rights Reserved</span></p>
+      
     </div>
 
   </footer>
