--- a/SelectExercise.html
+++ b/SelectExercise.html
@@ -119,7 +119,7 @@
             <li><a href="Reference.html" >ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
+                <li><a href="fill-in-blank.html">ကွက်လပ်ဖြည့်</a></li>
                 <li><a href="Exercise.html">(မှန်),(မှား) </a></li>
                 <li><a href="SelectExercise.html">ရွေးချယ်မှု</a></li>
                 
@@ -150,6 +150,9 @@
   </main>
 
   <footer id="footer" class="footer">
+
+    
+
     <div class="container copyright text-center mt-4">
       <div class="social-links d-flex mt-4 mb-4 text-center justify-content-center">
             <a href=""><i class="bi bi-twitter-x"></i></a>
