--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <li><a href="Reference.html">ကိုးကားချက်</a></li>
             <li class="dropdown"><a href="#"><span>လေ့ကျင့်ခန်း</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">ကွက်လပ်ဖြည့်</a></li>
+                <li><a href="fill-in-blank.html">ကွက်လပ်ဖြည့်</a></li>
                 <li><a href="Exercise.html">(မှန်),(မှား) </a></li>
                 <li><a href="SelectExercise.html">ရွေးချယ်မှု</a></li>
                 
@@ -176,7 +176,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/left.png" class="img-fluid about-img" alt="">
+            <img src="assets/img/right.png" class="about-img" alt="" style="width: 100%;height: 400px;object-fit: cover;">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
             <h3 style="color: var(--accent-color);" class="mb-5">ရည်ရွယ်ချက်</h3>
